# CrewAI-MarketingTeam

./: .gitignore  README.md  final-content-strategy.md  market_research.md  qa-review.md  streamlit_app.py  visual-content.md
project_crew/: README.md  final-content-strategy.md  market_research.md  pyproject.toml  visual-content.md
project_crew/src/project_crew/: crew.py  main.py
project_crew/src/project_crew/config/: agents.yaml  tasks.yaml
project_crew/src/project_crew/tools/: custom_tool.py
