[project]
name = "project_crew"
version = "0.1.0"
description = "project-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0"
]

[project.scripts]
project_crew = "project_crew.main:run"
run_crew = "project_crew.main:run"
train = "project_crew.main:train"
replay = "project_crew.main:replay"
test = "project_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
